--- a/pom.xml
+++ b/pom.xml
@@ -8,13 +8,13 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>micrometer-springboot-1.5</name>
+	<name>micrometer-springboot-2.3</name>
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.5.12.RELEASE</version>
+		<version>2.3.2.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
@@ -36,14 +36,20 @@
 
 		<dependency>
 			<groupId>io.micrometer</groupId>
-			<artifactId>micrometer-spring-legacy</artifactId>
-			<version>1.0.3</version>
+			<artifactId>micrometer-registry-prometheus</artifactId>
+			<version>1.5.3</version>
 		</dependency>
 
 		<dependency>
 			<groupId>io.micrometer</groupId>
-			<artifactId>micrometer-registry-prometheus</artifactId>
-			<version>1.0.3</version>
+			<artifactId>micrometer-core</artifactId>
+			<version>1.5.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.newrelic.telemetry</groupId>
+			<artifactId>micrometer-registry-new-relic</artifactId>
+			<version>0.5.0</version>
 		</dependency>
 
 		<dependency>
